--- a/templates/escape_stats_history.html
+++ b/templates/escape_stats_history.html
@@ -285,10 +285,11 @@
                 <select id="timeRange" onchange="loadData()">
                     <option value="1">最近1小时</option>
                     <option value="6">最近6小时</option>
-                    <option value="24" selected>最近24小时</option>
+                    <option value="24">最近24小时</option>
                     <option value="72">最近3天</option>
                     <option value="168">最近7天</option>
-                    <option value="0">全部数据</option>
+                    <option value="720">最近30天</option>
+                    <option value="0" selected>全部数据（从1月3日开始）</option>
                 </select>
             </div>
             <div class="control-group">
