--- a/templates/sar_slope_detail.html
+++ b/templates/sar_slope_detail.html
@@ -380,7 +380,7 @@
                 
                 html += `
                     <div class="table-row">
-                        <div class="table-cell ${positionClass}">${positionCn}${seq.sequence.toString().padStart(2, '0')}</div>
+                        <div class="table-cell ${positionClass}">${positionCn}${seq.seq_number || seq.sequence}</div>
                         <div class="table-cell">${seq.time.substring(11, 16)}</div>
                         <div class="table-cell">$${seq.price.toFixed(2)}</div>
                         <div class="table-cell">${seq.sar.toFixed(4)}</div>
